--- a/styles.css
+++ b/styles.css
@@ -19,25 +19,44 @@
 body {
     background-color: var(--bg-color);
     width: 100%;
-    height: 100vh;
+    height: 100svh;
+    display: flex;
+    justify-content: center;
+
+}
+
+.container {
+    max-width: 600px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-
+    justify-content: space-between;
 }
 
 header{
     text-align: center;
-    margin: 30px 0 60px;
+    padding: 50px 0;
 }
 
 main {
-    max-width: 600px;
-    margin: 0 20px;
+    padding: 0 20px;
 }
 
 section {
-    padding: 40px 0;
+    padding: 20px 0;
+    border-bottom: 1px solid #E5E7EB;
+}
+
+section:nth-last-child(1) {
+    border-bottom: none;
+}
+
+footer {
+    padding: 20px 0;
+}
+
+footer p, footer a {
+    text-align: center;
+    font-size: 0.8rem;
 }
 
 h1 {
@@ -69,7 +88,14 @@ strong {
     font-weight: 600;
 }
 
-hr {
-    border: 0;
-    border-top: 1px solid #E5E7EB;
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 640px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .container {
+        max-width: 768px;
+    }
 }
